# foyer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md
.github/workflows/: cores-autotag.yml  release.yml
assets/: LICENSE-ART.md
assets/config-examples/themes/: midnight.jsonc  snow.jsonc
assets/romfs/bezels/: LICENSE
assets/romfs/i18n/en-US/: foyer.json
assets/romfs/i18n/es/: foyer.json
assets/romfs/i18n/pt-BR/: foyer.json
assets/romfs/themes/: dark.jsonc  forest.jsonc  hos.jsonc  light.jsonc  midnight.jsonc  snow.jsonc
assets/romfs/themes/alekfull-nx/: theme-dark.jsonc  theme-dracula.jsonc  theme-emerald.jsonc  theme-nord.jsonc  theme-snow.jsonc  theme.jsonc
assets/romfs/xml/activity/: foyer_downloads.xml  foyer_settings.xml  game.xml  home.xml  splash.xml  system.xml
assets/romfs/xml/tabs/: foyer_settings.xml
browser/: CMakeLists.txt
browser/include/: first_run.hpp  install_queue.hpp  library_state.hpp  manifest_cache.hpp  power_actions.hpp  self_update.hpp  theme_change.hpp  theme_watcher.hpp  update_check.hpp
browser/include/activity/: bezel_picker_activity.hpp  bezel_source_browser_activity.hpp  download_queue_activity.hpp  downloads_activity.hpp  game_activity.hpp  home_activity.hpp  log_viewer_activity.hpp  per_game_activity.hpp  per_game_bezel_picker_activity.hpp  per_system_activity.hpp  power_activity.hpp  search_activity.hpp  settings_activity.hpp  splash_activity.hpp  system_activity.hpp  wizard_activity.hpp
browser/include/tab/: settings_tab.hpp
browser/include/widgets/: action_button.hpp  cover_flow.hpp  masked_input_cell.hpp  tintable_image.hpp
browser/src/: action_button.cpp  bezel_picker_activity.cpp  bezel_source_browser_activity.cpp  boot_splash.cpp  boot_splash.hpp  cover_flow.cpp  download_queue_activity.cpp  downloads_activity.cpp  first_run.cpp  game_activity.cpp  home_activity.cpp  hos_status.cpp  hos_status.hpp  install_queue.cpp  launch.cpp  launch.hpp  library_state.cpp  log_viewer_activity.cpp  main.cpp  manifest_cache.cpp  masked_input_cell.cpp  mtp.cpp  mtp.hpp  per_game_activity.cpp  per_game_bezel_picker_activity.cpp  per_system_activity.cpp  power_actions.cpp  power_activity.cpp  search_activity.cpp  seed_assets.cpp  seed_assets.hpp  self_update.cpp  session.cpp  session.hpp  settings_activity.cpp  settings_tab.cpp  splash_activity.cpp  switch_titles.cpp  switch_titles.hpp  system_activity.cpp  (+7 more)
cmake/: patch_brls_audio.cmake  patch_brls_image_tint.cmake  patch_brls_rumble_clear.cmake  patch_brls_wraparound.cmake
cores/: flycast.cmake  mupen64plus.cmake
docs/: CLAUDE.md  HANDOFF-2026-05-03.md  HANDOFF-2026-05-09.md  MESA_ON_SWITCH_INVESTIGATION.md  PLAYER_MIGRATION_PLAN.md  README.md  SHADERS_PLAN.md
player/: CMakeLists.txt
player/include/: cheats_picker_activity.hpp  core_options_picker_activity.hpp  display_picker_activity.hpp  emulator_activity.hpp  emulator_view.hpp  pause_activity.hpp  shaders_picker_activity.hpp  slot_picker_activity.hpp
player/include/imgui/: emulator_loop.hpp  gl_context.hpp  icons.hpp  imgui_switch_input.hpp  imgui_theme.hpp  modals.hpp
player/include/plutonium/: emulator_element.hpp  main_application.hpp  pause_menu.hpp  session_tracker.hpp
player/src/: cheats_picker_activity.cpp  core_options_picker_activity.cpp  display_picker_activity.cpp  emulator_activity.cpp  emulator_view.cpp  main.cpp  main_brls.cpp  pause_activity.cpp  shaders_picker_activity.cpp  slot_picker_activity.cpp
player/src/imgui/: emulator_loop.cpp  gl_context.cpp  imgui_switch_input.cpp  imgui_theme.cpp  main_imgui.cpp  modals.cpp
player/src/plutonium/: emulator_element.cpp  main_application.cpp  main_plutonium.cpp  pause_menu.cpp  session_tracker.cpp
shared/: CMakeLists.txt
shared/i18n/: i18n.cpp  i18n.hpp  i18n_es.cpp  i18n_pt_br.cpp
shared/libretro/: aspect.hpp  audio.cpp  audio.hpp  audio_sdl.cpp  audio_sdl.hpp  bezel.cpp  bezel.hpp  bezel_gl.cpp  bezel_gl.hpp  bezel_sdl.cpp  bezel_sdl.hpp  cheats.cpp  cheats.hpp  cheevos.cpp  cheevos.hpp  core_options.cpp  core_options.hpp  frontend.cpp  frontend.hpp  input.cpp  input.hpp  input_sdl.cpp  input_sdl.hpp  overlay.cpp  overlay.hpp  savestate.cpp  savestate.hpp  shader.cpp  shader.hpp  video.cpp  video.hpp  video_gl.cpp  video_gl.hpp  video_hw.cpp  video_hw.hpp  video_sdl.cpp  video_sdl.hpp
shared/net/: http.cpp  http.hpp
shared/platform/: app.cpp  app.hpp  log.cpp  log.hpp  services.cpp
shared/scrapers/: accounts.cpp  accounts.hpp  cache.cpp  cache.hpp  libretro_index.cpp  libretro_index.hpp  libretro_thumbnails.cpp  libretro_thumbnails.hpp  screenscraper.cpp  screenscraper.hpp  steamgriddb.cpp  steamgriddb.hpp
shared/ui/: icons.hpp
shared/util/: archive.cpp  archive.hpp
tools/: fetch_logos.sh  gen_bezels.sh  i18n_scan.py  sync-system-art.sh
tools/lbl-reset/: Makefile
tools/lbl-reset/source/: main.c
